# crate-wp-mini

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  types.rs
src/endpoints/: mod.rs  story.rs  user.rs
src/field/: language_field.rs  macros.rs  mod.rs  part_content_field.rs  part_field.rs  part_reference_field.rs  part_stub_field.rs  story_field.rs  text_url_field.rs  user_field.rs  user_stub_field.rs
src/model/: language.rs  mod.rs  part.rs  part_content.rs  part_reference.rs  part_stub.rs  story.rs  text_url.rs  user.rs  user_stub.rs
